# Quack-Writer

./: .eslintrc.json  .gitignore  CLAUDE.md  HANDOFF.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_io.rs  lib.rs  main.rs  spell.rs
src/components/: AppMenuBar.css  AppMenuBar.tsx  DuckLogo.tsx  EditorContextMenu.css  EditorContextMenu.tsx  EditorView.css  EditorView.tsx  FileExplorer.css  FileExplorer.tsx  FormatBar.css  FormatBar.tsx  InlineRename.tsx  MarkdownEditor.css  MarkdownEditor.tsx  MarkdownPreview.css  MarkdownPreview.tsx  SaveStatus.css  SaveStatus.tsx  StartMenu.css  StartMenu.tsx  StatusBar.css  StatusBar.tsx  Tabs.css  Tabs.tsx
src/lib/: docActions.ts  editorViewBus.ts  fileIo.ts  fontIo.ts  spell.ts  useCloseGuard.ts
src/store/: docs.ts  font.ts  recents.ts  save.ts  selection.ts  theme.ts  ui.ts  workspace.ts
src/styles/: global.css
