[package]
name = "quack-writer"
version = "0.1.0"
description = "A sleek, modern, native writing app"
authors = ["Quack Writer"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "quack_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows Spell Checking API (ISpellChecker) for editor spelling suggestions.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Globalization",
  "Win32_System_Com",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
